docs/css/index.css
html {
  padding: 0;
  margin: 0;
}

body {
  height: 100%;
  background: black;
  background-image: url("../assets/images/koi.png");
  background-repeat: no-repeat, repeat;
  background-attachment: fixed;
  /* background-position: center; */
  background-position-y: 5%;
  background-position-x: 50%;
  background-size: 25%;
}

.center {
  display: flex;
  align-items: center;
  justify-content: center;
  margin: 0;
  position: absolute;
  text-align: center;
}

.centerHozAndVert {
  display: flex;
  align-items: center;
  justify-content: center;
  margin: 0;
  position: absolute;
  top: 50%;
  left: 50%;
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -35%);
  margin-top: -50px;
}

input[type=text] {
  height: 70px;
  width: 350px;
  font-size: 35px;
  border: 0px solid white;
  border-bottom-width: 2px;
  outline: none;
  /* text-align: center; */
  letter-spacing: 50px;
  background: transparent;
  margin-left: 5px;
  color: transparent;
  text-shadow: 0 0 0 white;
  padding-left: 10px;
}

input[type=text]::-webkit-inner-spin-button, input[type=text]::-webkit-outer-spin-button {
  -webkit-appearance: none;
}

input[type=text] {
  -moz-appearance: textfield;
}

p {
  font-size: 50px;
  color: white;
  margin-left: -30px;
  cursor: pointer;
}

h1 {
  margin-bottom: -300px;
  font-family: 'Press Start 2P', cursive;
  /* font-family: 'Raleway Dots', cursive; */
  font-size: 25px;
  color: white;
}

#button {
  display: none;
  padding: 20px;
  border: solid 3px white;
  background-color: black;
  cursor: pointer;
  color: white;
  font-size: 20px;
  font-family: 'Press Start 2P', cursive;
  box-shadow: 5px 5px 0px white;
  position: absolute;
  top: 50%;
  left: 50%;
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  text-decoration: none;
}

#button:hover {
  animation: press .1s forwards;
}

@keyframes press {
  0% {
    box-shadow: 5px 5px 0px white;
  }

  100% {
    box-shadow: 0px 0px 0px white;
    transform: translate(-98px, -28px)
  }
}

